--- a/views/atualizar.ejs
+++ b/views/atualizar.ejs
@@ -1,9 +1,40 @@
-<h1>Atualizar usuário</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atualizar</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+</head>
+<body>
+<div class="container-fluid p-2 bg-primary text-white">
+    <h1>Atualiza usuário</h1>
+</div>
 <hr>
-<form action="/atualizacao" method="post">
-    <input type="hidden" name="id" id="id" value="<%= usuario.id %>">
-    <input type="text" name="nome" id="nome" placeholder="Nome:" value="<%= usuario.nome %>"><br>
-    <input type="email" name="email" id="email" placeholder="E-mail:" value="<%= usuario.email %>"><br>
-    <input type="number" name="idade" id="idade" placeholder="Idade:" value="<%= usuario.idade %>"><br>
-    <button type="submit">Atualizar</button>
-</form>
+
+<div class="container-sm">
+    <form action="/atualizacao" method="post" class="form">
+    
+        <input type="hidden" name="id" id="id" value="<%= usuario.id %>">
+    
+        <div class="m-3">
+            <label for="nome" class="form-label">Nome:</label>
+            <input type="text" name="nome" id="nome" placeholder="Nome:" value="<%= usuario.nome %>" class="form-control">
+        </div>
+        <div class="m-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" name="email" id="email" placeholder="E-mail:" value="<%= usuario.email %>" class="form-control">
+        </div>
+        <div class="m-3">
+            <label for="idade" class="form-label">Idade</label>
+            <input type="number" name="idade" id="idade" placeholder="Idade:" value="<%= usuario.idade %>" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary m-3">Atualizar</button>
+    </form>
+</div>
+
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</html>
