--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -1,8 +1,38 @@
-<h1>Cadastro de usuário</h1>
-<hr>
-<form action="/criar" method="post">
-    <input type="text" name="nome" id="nome" placeholder="Nome:"><br>
-    <input type="email" name="email" id="email" placeholder="E-mail:"><br>
-    <input type="number" name="idade" id="idade" placeholder="Idade:"><br>
-    <button type="submit">Cadastrar</button>
-</form>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+</head>
+<body>
+
+    <div class="container-fluid bg-primary text-white p-3">
+        <h1>Cadastro de usuário</h1>
+    </div>
+    <hr>
+    <div class="container p-3">
+        <form action="/criar" method="post">
+            <div class="m-3">
+                <label for="nome" class="form-label">Nome:</label>
+                <input type="text" name="nome" id="nome" placeholder="Nome:" class="form-control">
+            </div>
+            <div class="m-3">
+                <label for="email" class="form-label">E-mail:</label>
+                <input type="email" name="email" id="email" placeholder="E-mail:" class="form-control">
+            </div>
+            <div class="m-3">
+                <label for="idade" class="form-label">Idade:</label>
+                <input type="number" name="idade" id="idade" placeholder="Idade:" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-primary m-3">Cadastrar</button>
+        </form>
+    </div>
+
+</body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+</html>
