--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,41 @@
-<h1>Usuários</h1>
-<hr>
-<table>
-    <thead>
-        <th>Nome</th>
-        <th>E-mail</th>
-        <th>Idade</th>
-        <th colspan="2">Opções</th>
-    </thead>
-    <tbody>
-        <%usuarios.forEach(usuario => {%>
-            <tr>
-                <td><%=usuario.nome%></td>
-                <td><%=usuario.email%></td>
-                <td><%=usuario.idade%></td>
-                <td><a href="/atualizar/<%= usuario.id %>">Atualizar</a></td>
-                <td><a href="/deletar/<%= usuario.id %>">Deletar</a></td>
-            </tr>
-        <% }) %>
-    </tbody>
-</table>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+</head>
+<body>
+
+    <div class="container-fluid p-3 bg-primary text-white ">
+        <h1>Usuários</h1>
+    </div>
+    <hr>
+    <div class="container p-3 ">
+        <table class="table table-dark table-hover">
+            <thead>
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th>Idade</th>
+                <th colspan="2">Opções</th>
+            </thead>
+            <tbody>
+                <%usuarios.forEach(usuario => {%>
+                    <tr>
+                        <td><%=usuario.nome%></td>
+                        <td><%=usuario.email%></td>
+                        <td><%=usuario.idade%></td>
+                        <td><a href="/atualizar/<%= usuario.id %>" class="btn btn-primary">Atualizar</a></td>
+                        <td><a href="/deletar/<%= usuario.id %>" class="btn btn-danger">Deletar</a></td>
+                    </tr>
+                <% }) %>
+            </tbody>
+        </table>
+    </div>
+</body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+</html>
